[gd_scene load_steps=13 format=3 uid="uid://7r55nm4slqb1"]

[ext_resource type="Script" path="res://WorldBase.gd" id="1_cyr6l"]
[ext_resource type="Script" path="res://Rocket.gd" id="1_dyrov"]
[ext_resource type="Material" uid="uid://lqjkdlqshl5l" path="res://M_RocketBody.tres" id="3_cnk54"]
[ext_resource type="Material" uid="uid://b84co07v4brp1" path="res://M_RocketBooster.tres" id="4_4wu17"]
[ext_resource type="SphereMesh" uid="uid://den74hg54dxup" path="res://SM_RocketGas.tres" id="5_3ub18"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_dlljf"]

[sub_resource type="BoxMesh" id="BoxMesh_w7fgs"]
size = Vector3(20, 0.25, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_bdij1"]
size = Vector3(20, 0.25, 20)

[sub_resource type="CylinderMesh" id="CylinderMesh_0ekqf"]
material = ExtResource("3_cnk54")
height = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_drmm2"]
height = 0.25

[sub_resource type="CylinderMesh" id="CylinderMesh_kuab7"]
material = ExtResource("4_4wu17")
top_radius = 0.1
bottom_radius = 0.2
height = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_huy34"]
height = 0.1
radius = 0.2

[node name="Node3D" type="Node3D"]
script = ExtResource("1_cyr6l")

[node name="Floor" type="StaticBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_dlljf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_w7fgs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_bdij1")

[node name="Rocket" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1739, 0)
mass = 150.0
script = ExtResource("1_dyrov")

[node name="PinJoint3D" type="PinJoint3D" parent="Rocket"]
node_a = NodePath("..")
node_b = NodePath("CameraPivot")

[node name="CameraPivot" type="RigidBody3D" parent="Rocket/PinJoint3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 5)
mass = 0.01
lock_rotation = true

[node name="Camera3D" type="Camera3D" parent="Rocket/PinJoint3D/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.79653, 0.604599, 0, -0.604599, 0.79653, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rocket"]
mesh = SubResource("CylinderMesh_0ekqf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rocket"]
shape = SubResource("CylinderShape3D_drmm2")

[node name="SpotLight3D" type="SpotLight3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
light_color = Color(1, 0, 0.0156863, 1)
light_energy = 3.0
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 10.0
spot_range = 45.0
spot_angle = 30.0
spot_angle_attenuation = 1.7411

[node name="FootZp" type="HingeJoint3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0.47)
node_a = NodePath("..")
node_b = NodePath("RigidBody3D")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="RigidBody3D" type="RigidBody3D" parent="Rocket/FootZp"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rocket/FootZp/RigidBody3D"]
mesh = SubResource("CylinderMesh_kuab7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rocket/FootZp/RigidBody3D"]
shape = SubResource("CylinderShape3D_huy34")

[node name="Particles3D" type="CPUParticles3D" parent="Rocket/FootZp/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0646423, 0)
amount = 16
mesh = ExtResource("5_3ub18")
direction = Vector3(0, -1, 0)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.7

[node name="FootZn" type="HingeJoint3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -0.47)
node_a = NodePath("..")
node_b = NodePath("RigidBody3D")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="RigidBody3D" type="RigidBody3D" parent="Rocket/FootZn"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rocket/FootZn/RigidBody3D"]
mesh = SubResource("CylinderMesh_kuab7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rocket/FootZn/RigidBody3D"]
shape = SubResource("CylinderShape3D_huy34")

[node name="Particles3D" type="CPUParticles3D" parent="Rocket/FootZn/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.065, 0)
amount = 16
mesh = ExtResource("5_3ub18")
direction = Vector3(0, -1, 0)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.7

[node name="FootXp" type="HingeJoint3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.47, -0.2, 0)
node_a = NodePath("..")
node_b = NodePath("RigidBody3D")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="RigidBody3D" type="RigidBody3D" parent="Rocket/FootXp"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rocket/FootXp/RigidBody3D"]
mesh = SubResource("CylinderMesh_kuab7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rocket/FootXp/RigidBody3D"]
shape = SubResource("CylinderShape3D_huy34")

[node name="Particles3D" type="CPUParticles3D" parent="Rocket/FootXp/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.065, 0)
amount = 16
mesh = ExtResource("5_3ub18")
direction = Vector3(0, -1, 0)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.7

[node name="FootXn" type="HingeJoint3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.47, -0.2, 0)
node_a = NodePath("..")
node_b = NodePath("RigidBody3D")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="RigidBody3D" type="RigidBody3D" parent="Rocket/FootXn"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rocket/FootXn/RigidBody3D"]
mesh = SubResource("CylinderMesh_kuab7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rocket/FootXn/RigidBody3D"]
shape = SubResource("CylinderShape3D_huy34")

[node name="Particles3D" type="CPUParticles3D" parent="Rocket/FootXn/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.065, 0)
amount = 16
mesh = ExtResource("5_3ub18")
direction = Vector3(0, -1, 0)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.7

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.78192, 0)
light_energy = 7.141
omni_range = 94.638
omni_attenuation = 1.7411

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.89335, 2.69776, 10.2112)
light_energy = 7.141
omni_range = 94.638
omni_attenuation = 1.7411

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.7171, 9.49457, -2.85772)
light_energy = 7.141
omni_range = 94.638
omni_attenuation = 1.7411

[node name="OmniLight3D4" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.56951, 2.20489, -7.34712)
light_energy = 7.141
omni_range = 94.638
omni_attenuation = 1.7411
